--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,11 @@
       href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8998714706102555"
+      crossorigin="anonymous"
+    ></script>
     <title>Whitelist Report</title>
   </head>
   <body>
